# PROEKT1

./: .gitignore  PROEKT1 rools.md  PROEKT1 tree.md  PROEKT1.code-workspace  README.backfill.md  README.md  backfill.ps1  delete-timestamp-keys.dryrun.20251103150406.json  delete-timestamp-keys.dryrun.20251103150429.json  main200226.rar  move_yclients_project.ps1  partitions.csv  proxy-worker.js  remove_esp32_all.ps1  requirements.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  test-import-5.json  tilda_brand_slider_insert.html  worker.js  yc-headers-output.txt  yc-test-headers.ps1
.github/: copilot-instructions.md
PROEKT1/: .cproject  .project  CMakeLists.txt  sdkconfig.defaults
UPDATE_LibreHardwareMonitor/: pawnio_extracted.sys
app PROEKT1/: LibreHardwareMonitor.config  LibreHardwareMonitorLog-2025-11-11-1.csv  LibreHardwareMonitorLog-2025-11-12-1.csv  PROEKT1.py  PROEKT1.spec  config.json  curves.json
appDESIGN/: design-preview.html
appPROEKT1/: PROEKT1.py  PROEKT1.spec  PROEKT1_log  PawnIO.cat  PawnIO.sys  ROUNDED-CORNERS-FIX.md  WINDOW-STABILITY-FINAL-FIX.md  cmd запуска.txt  config.json  curves.json  pawnio.inf  theme.qss
build_check/: CMakeCache.txt
components/u8g2_port/: CMakeLists.txt  README.md  u8g2_espidf_port.c  u8g2_espidf_port.h
demos/: skills-showcase.html
ignorelogs/: 2026-01-27T15-25-36-706Z_main.json  2026-01-27T15-25-36-707Z_test_main.json  2026-01-27T15-25-36-708Z_README.json  2026-01-27T15-25-36-709Z_requirements.json
main/: CMakeLists.txt  main.c  (+3 more)
oled_u8g2_test/components/u8g2_port/: CMakeLists.txt  u8g2_espidf_port.c
(+45 files in other folders)
